<resources>
    <string name="app_name">SocialQuiz</string>
    <string name="title_home">Categories</string>
    <string name="profile">Profile</string>
    <string name="selectCategory">Select category</string>
    <string name="tryAgain">Try again</string>
    <string name="nextQuestion">Next question</string>
    <string name="congrat">Congratulations!</string>
    <string name="answerIncorrect">Wrong answer!</string>
    <string name="answerCorrect">You\'re right!</string>
    <string name="questionAuthor">Question\'s author:</string>
    <string name="questionAuthorExample"><u>kirkadev</u></string>
    <string name="loading">Loading…</string>
    <string name="auth_error">You\'re not authorized, try again later, please</string>
    <string name="permissions_failed">To upload the file, the app should get permissions</string>
    <string name="profile_error">Can\'t get info about profile</string>
    <string name="nick_name_label">Nickname</string>
    <string name="about_label">About me</string>
    <string name="avatar_description">Your avatar</string>
    <string name="role_label">Role</string>
    <string name="score_label">Score</string>
    <string name="account_type_label">Account type</string>
    <string name="not_paid">Basic</string>
    <string name="is_paid">Premium</string>
    <string name="tiktok_label">Tik-Tok</string>
    <string name="instagram_label">Instagram</string>
    <string name="choose_your_avatar">Choose your avatar</string>
    <string name="choose_your_video">Choose your video question</string>
    <string name="empty">Empty</string>
    <string name="cant_upload_avatar">Can\'t upload avatar</string>
    <string name="get_question_error">Get question error. Please, try again later.</string>
    <string name="repeat_video">Repeat video</string>
    <string name="write_result_failed">Can\'t write result</string>
    <string name="add_question">Add question</string>
    <string name="add_question_hint">Here you may pull in your own question and become famous :)</string>
    <string name="category_label">Category</string>
    <string name="isCorrectAnswer">Correct answer</string>
    <string name="add_video">Add video</string>
    <string name="submit_for_approval">Submit for approval</string>
    <string name="answer_number">Answer %1$s</string>
    <string name="answer_variant_number">Enter answer here</string>
    <string name="video_not_choosen">Video doesn\'t choosen</string>
    <string name="upload_video_error">Can\'t upload the video</string>
    <string name="upload_video_success">Question is uploaded</string>
    <string name="playback_error">Playback error</string>
    <string name="uploading_question">Uploading your question...</string>
    <string name="correct_variant_not_choosen">Correct answer didn\'t choosen</string>
    <string name="all_question_solved">"All question in this category solved! "</string>
</resources>