<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.profile.ProfileController"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/avatarContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
            android:id="@+id/imageViewAvatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/avatar_description"
            tools:src="@tools:sample/avatars" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/nicknameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="80dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:background="@drawable/profile_property_shape"
                tools:text="kirkaDev"
                android:visibility="gone"
                tools:visibility="visible">
            </androidx.appcompat.widget.AppCompatEditText>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/avatarContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/scoreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/profile_property_label"
                android:text="@string/score_label">
            </androidx.appcompat.widget.AppCompatTextView>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/scoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="80dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/profile_property_shape"
                tools:text="100500">
            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/roleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/profile_property_label"
                android:text="@string/role_label">
            </androidx.appcompat.widget.AppCompatTextView>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/roleEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="80dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/profile_property_shape"
                tools:text="Игрок">
            </androidx.appcompat.widget.AppCompatTextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/aboutLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/profile_property_label"
                android:text="@string/about_label">
            </androidx.appcompat.widget.AppCompatTextView>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/aboutEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="8dp"
                android:minWidth="80dp"
                android:background="@drawable/profile_property_shape"
                tools:text="Люблю кататься на горных лыжах, а еще путешествовать,
        плавать, играть на гитаре, путешествовать и гулять">
            </androidx.appcompat.widget.AppCompatEditText>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/instagram_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/profile_property_label"
                android:text="@string/instagram_label">
            </androidx.appcompat.widget.AppCompatTextView>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/instagramEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="80dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/profile_property_shape"
                tools:text="kirkasukhov">
            </androidx.appcompat.widget.AppCompatEditText>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tiktok_Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/profile_property_label"
                android:text="@string/tiktok_label">
            </androidx.appcompat.widget.AppCompatTextView>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/tikTokEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="80dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/profile_property_shape"
                tools:text="kirkadev">
            </androidx.appcompat.widget.AppCompatEditText>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/accountTypeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/profile_property_label"
                android:text="@string/account_type_label">
            </androidx.appcompat.widget.AppCompatTextView>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/accountTypeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="80dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/profile_property_shape"
                tools:text="@string/is_paid">
            </androidx.appcompat.widget.AppCompatTextView>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

